--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -83,6 +83,7 @@ textarea.form-control {
 	background: #cb8819;
 	border: none;
 	box-shadow: none;
+	color: #fff !important;
 }
 button.btn.btn-success.gold-b:hover {
 	background: #cb8819;
