--- a/public/admin/css/dev.css
+++ b/public/admin/css/dev.css
@@ -2,3 +2,19 @@
     font-size: 14px;
     color: #cb8819;
 }
+.modal-content {
+    background-color: #404040;
+}
+.form-label5 {
+    margin-bottom: 20px;
+}
+.cut-text { 
+  text-overflow: ellipsis;
+  overflow: hidden; 
+  width: 160px; 
+  height: 1.2em; 
+  white-space: nowrap;
+}
+.btn-danger {
+    color: #fff !important;
+}
