--- a/public/admin/css/dev.css
+++ b/public/admin/css/dev.css
@@ -15,6 +15,15 @@
   height: 1.2em; 
   white-space: nowrap;
 }
+
+.feature-cut-text{
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3; /* number of lines to show */
+    -webkit-box-orient: vertical;
+  }
 .btn-danger {
     color: #fff !important;
 }
