--- a/public/website/css/dev.css
+++ b/public/website/css/dev.css
@@ -8,8 +8,31 @@
   width: 230px; 
   height: 1.2em; 
   white-space: nowrap;
+
+}
+
+
+.feature-cut-text{
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3; /* number of lines to show */
+  -webkit-box-orient: vertical;
 }
 
 .not-found {
     color: #fff;
+}
+
+.custom-tag4 {
+  position: absolute;
+  background: #c98827;
+  right: 0px;
+  top: 0px;
+  color: white;
+  padding: 5px 13px;
+  border-radius: 0px 7px 1px 11px;
+  font-size: 15px;
+  letter-spacing: 0.4px;
 }
