--- a/public/website/css/custom.css
+++ b/public/website/css/custom.css
@@ -424,6 +424,7 @@
         padding: 10px 20px;
         border-radius: 6px;
         font-weight: 500;
+        border: none;
     }
     
     .custom-btn2 {
